// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input/ino-switch Checked smoke-test 1`] = `
<div id="root-inner">
  <div class="story-switch">
    <ino-switch switch-id="some-switch-id"
                checked
                disabled="false"
                name
                class="ino-switch hydrated"
    >
      <button id="some-switch-id"
              class="mdc-switch mdc-switch--selected mdc-ripple-upgraded mdc-ripple-upgraded--unbounded"
              type="button"
              role="switch"
              aria-checked="true"
              style="--mdc-ripple-fg-size:0px; --mdc-ripple-fg-scale:NaN; --mdc-ripple-left:0px; --mdc-ripple-top:0px;"
      >
        <div class="mdc-switch__track">
        </div>
        <div class="mdc-switch__handle-track">
          <div class="mdc-switch__handle">
            <div class="mdc-switch__ripple">
            </div>
          </div>
        </div>
      </button>
      <label for="some-switch-id">
        Switch Label
        <input type="hidden"
               class="aux-input"
               name
               value
        >
      </label>
    </ino-switch>
  </div>
</div>
`;

exports[`Input/ino-switch Disabled smoke-test 1`] = `
<div id="root-inner">
  <div class="story-switch">
    <ino-switch switch-id="some-switch-id"
                checked="false"
                disabled
                name
                class="ino-switch ino-switch-disabled hydrated"
    >
      <button id="some-switch-id"
              class="mdc-switch mdc-switch--unselected mdc-ripple-upgraded mdc-ripple-upgraded--unbounded"
              disabled
              type="button"
              role="switch"
              aria-checked="false"
              style="--mdc-ripple-fg-size:0px; --mdc-ripple-fg-scale:NaN; --mdc-ripple-left:0px; --mdc-ripple-top:0px;"
      >
        <div class="mdc-switch__track">
        </div>
        <div class="mdc-switch__handle-track">
          <div class="mdc-switch__handle">
            <div class="mdc-switch__ripple">
            </div>
          </div>
        </div>
      </button>
      <label for="some-switch-id">
        Switch Label
        <input type="hidden"
               class="aux-input"
               disabled
               name
               value
        >
      </label>
    </ino-switch>
  </div>
</div>
`;

exports[`Input/ino-switch Playground smoke-test 1`] = `
<div id="root-inner">
  <div class="story-switch">
    <ino-switch switch-id="some-switch-id"
                checked="false"
                disabled="false"
                name
                class="ino-switch hydrated"
    >
      <button id="some-switch-id"
              class="mdc-switch mdc-switch--unselected mdc-ripple-upgraded mdc-ripple-upgraded--unbounded"
              type="button"
              role="switch"
              aria-checked="false"
              style="--mdc-ripple-fg-size:0px; --mdc-ripple-fg-scale:NaN; --mdc-ripple-left:0px; --mdc-ripple-top:0px;"
      >
        <div class="mdc-switch__track">
        </div>
        <div class="mdc-switch__handle-track">
          <div class="mdc-switch__handle">
            <div class="mdc-switch__ripple">
            </div>
          </div>
        </div>
      </button>
      <label for="some-switch-id">
        Switch Label
        <input type="hidden"
               class="aux-input"
               name
               value
        >
      </label>
    </ino-switch>
  </div>
</div>
`;
